Updated application to connect with database: Creation of Query classes to access database php scripts Create account Page:  Ability to create new account  Error if account exists. Login Page:  Ability to login using correct credentials  Error if account does not exists.  Error on invalid entry.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,6 @@
     <string name="member_home">Member Home</string>
     <string name="librarian_home">Librarian Home</string>
     <string name="administrator_home">Administrator Home</string>
+    <string name="title_activity_home_navigation">home_navigation</string>
 
 </resources>
