Implemented navigation bar for member

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,7 @@
     <string name="title_activity_home_navigation">home_navigation</string>
     <string name="search_for_member">Search for member</string>
 
+    //Drawer
+    <string name="navigation_drawer_open">Open Navigation Drawer</string>
+    <string name="navigation_drawer_close">Close Navigation Drawer</string>
 </resources>
